// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design System/Core/Progress Completed smoke-test 1`] = `
<div aria-valuemax="100"
     aria-valuemin="0"
     role="progressbar"
     data-state="indeterminate"
     data-max="100"
     class="relative h-2 w-full overflow-hidden rounded-full bg-primary/20"
>
  <div data-state="indeterminate"
       data-max="100"
       class="h-full w-full flex-1 bg-primary transition-all"
       style="transform: translateX(0%);"
  >
  </div>
</div>
`;

exports[`Design System/Core/Progress Default smoke-test 1`] = `
<div aria-valuemax="100"
     aria-valuemin="0"
     role="progressbar"
     data-state="indeterminate"
     data-max="100"
     class="relative h-2 w-full overflow-hidden rounded-full bg-primary/20"
>
  <div data-state="indeterminate"
       data-max="100"
       class="h-full w-full flex-1 bg-primary transition-all"
       style="transform: translateX(-70%);"
  >
  </div>
</div>
`;

exports[`Design System/Core/Progress Indeterminate smoke-test 1`] = `
<div aria-valuemax="100"
     aria-valuemin="0"
     role="progressbar"
     data-state="indeterminate"
     data-max="100"
     class="relative h-2 w-full overflow-hidden rounded-full bg-primary/20"
>
  <div data-state="indeterminate"
       data-max="100"
       class="h-full w-full flex-1 bg-primary transition-all"
       style="transform: translateX(-100%);"
  >
  </div>
</div>
`;
